useWindowWidth hook isVerticalSlider depends on screen width fixed header spacing

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
 
   h1 {
     font-size: 20px;
-    line-height: 32px;
+    line-height: 160%;
   }
 
   p {
@@ -26,6 +26,10 @@ body {
   a {
     width: 50px;
   }
+
+  .tile .question-button {
+    border-radius: 50px;
+  }
 }
 
 @media screen and (min-width: 601px) {
@@ -35,6 +39,7 @@ body {
 
   h1 {
     font-size: 40px;
+    line-height: 140%;
   }
 
   p {
@@ -42,7 +47,11 @@ body {
   }
 
   a {
-    width: 100px;
+    width: 80px;
+  }
+
+  .tile .question-button {
+    border-radius: 100px;
   }
 }
 
@@ -127,7 +136,6 @@ body {
   justify-content: stretch;
   min-height: inherit;
   width: 78%;
-  border-radius: 100px;
   border: 1px solid #fbfbfb;
   background: transparent;
   text-align: center;
